[gd_scene load_steps=37 format=3 uid="uid://byw7abk88jgwq"]

[ext_resource type="Script" path="res://Scripts/Player/Player.gd" id="1_2efai"]
[ext_resource type="Shader" path="res://Assets/Shaders/Defensive.gdshader" id="2_5f8dx"]
[ext_resource type="Script" path="res://Scripts/Stats/HealthComponent.gd" id="3_2s3ow"]
[ext_resource type="Texture2D" uid="uid://d3vf7mmho8o41" path="res://Assets/Characters/Jex.png" id="3_4yh8x"]
[ext_resource type="Texture2D" uid="uid://ckay72y2lp226" path="res://Assets/UI/PlayerReticle/PlayerReticle.png" id="3_723uu"]
[ext_resource type="Script" path="res://Scripts/Stats/CooldownComponent.gd" id="4_unu1y"]
[ext_resource type="Script" path="res://Scripts/Upgrades/CooldownUpgrades/CooldownAdditiveReduction.gd" id="5_eejht"]
[ext_resource type="Script" path="res://Scripts/Stats/ColorComponent.gd" id="6_bw6ym"]
[ext_resource type="Texture2D" uid="uid://b5gcpgy1x6h0j" path="res://Assets/UI/Upgrades/Dash.png" id="6_iqabo"]
[ext_resource type="Texture2D" uid="uid://43677synoxf3" path="res://Assets/UI/Upgrades/Bullet.png" id="6_k1tej"]
[ext_resource type="Script" path="res://Scripts/Upgrades/HealthUpgrades/HealthAdditiveUpgrade.gd" id="6_otwx6"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerCamera.gd" id="7_2xrf5"]
[ext_resource type="Texture2D" uid="uid://drr0kj6v0ecg3" path="res://Assets/UI/Upgrades/Melee.png" id="7_bdk3u"]
[ext_resource type="Texture2D" uid="uid://s4wnownnydp1" path="res://Assets/UI/Upgrades/shotgun.png" id="9_54qtt"]
[ext_resource type="Texture2D" uid="uid://ckpgnwxtfpgpd" path="res://Assets/UI/Upgrades/Dash_attack.png" id="10_hlm7b"]
[ext_resource type="AudioStream" uid="uid://1q6bjephb5cg" path="res://Assets/Sound/SFX/dash.mp3" id="10_yis84"]
[ext_resource type="Script" path="res://Scripts/Upgrades/AttackUpgrades/SwordAdditiveUpgrade.gd" id="11_tq7sg"]
[ext_resource type="Script" path="res://Scripts/Stats/SpeedComponent.gd" id="13_lbtrs"]
[ext_resource type="Script" path="res://Scripts/Upgrades/SpeedUpgrades/MovementSpeedUpgrade.gd" id="14_lwjg2"]
[ext_resource type="Texture2D" uid="uid://crrvojxbn3eiw" path="res://Assets/UI/Upgrades/Health.png" id="14_n2ppx"]
[ext_resource type="Texture2D" uid="uid://dje7goep4inlm" path="res://Assets/UI/Upgrades/Bullet_damage.png" id="17_l1s3k"]
[ext_resource type="Texture2D" uid="uid://cdf8kpa6j6fxg" path="res://Assets/UI/Upgrades/Sword_damage.png" id="19_j4w3v"]
[ext_resource type="Texture2D" uid="uid://u0xc8xj24372" path="res://Assets/UI/Upgrades/Speed_upgrade.png" id="23_v1wvv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nn6tn"]
shader = ExtResource("2_5f8dx")
shader_parameter/line_color = Color(0.439216, 0.945098, 0.239216, 1)
shader_parameter/min_thickness = 0.0
shader_parameter/max_thickness = 1.0
shader_parameter/line_thickness = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_bu4o7"]
atlas = ExtResource("3_4yh8x")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xp4uf"]
atlas = ExtResource("3_4yh8x")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpkca"]
atlas = ExtResource("3_4yh8x")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hktlw"]
atlas = ExtResource("3_4yh8x")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_auiqm"]
atlas = ExtResource("3_4yh8x")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wftgj"]
atlas = ExtResource("3_4yh8x")
region = Rect2(120, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lyh0"]
atlas = ExtResource("3_4yh8x")
region = Rect2(144, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_j05uy"]
atlas = ExtResource("3_4yh8x")
region = Rect2(168, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_khax2"]
atlas = ExtResource("3_4yh8x")
region = Rect2(192, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6u8ny"]
atlas = ExtResource("3_4yh8x")
region = Rect2(216, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2euyx"]
atlas = ExtResource("3_4yh8x")
region = Rect2(240, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_7wljc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bu4o7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xp4uf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpkca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hktlw")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_auiqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wftgj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lyh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j05uy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khax2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6u8ny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2euyx")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kfq2m"]
size = Vector2(15, 17)

[sub_resource type="GDScript" id="GDScript_pkb8x"]
script/source = "extends AddToStatUpgrade
class_name BulletAdditiveUpgrade

func _ready():
	upgradeText = \"Add {attack} to your bullet damage\".format({\"attack\": baseAdditive * (level + 1)})
	upgradeTitle = \"Bullet Damage Up\"

func _process(delta):
	upgradeText = \"Add {attack} to your bullet damage\".format({\"attack\": baseAdditive * (level + 1)})
	upgradeTitle = \"Bullet Damage Up\"
"

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_mask = 9
script = ExtResource("1_2efai")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_nn6tn")
position = Vector2(0, 1)
sprite_frames = SubResource("SpriteFrames_7wljc")
animation = &"Run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 1.5)
shape = SubResource("RectangleShape2D_kfq2m")

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
script = ExtResource("4_unu1y")
buttonCode = Array[String](["Space", "X"])

[node name="CooldownAdditiveReduction" type="Node" parent="DashCooldown"]
script = ExtResource("5_eejht")
ability = "Dash"
baseAdditive = 0.25
upgradeImagePath = "res://Assets/UI/Upgrades/Dash.png"
upgradeImage = ExtResource("6_iqabo")

[node name="ShootCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
script = ExtResource("4_unu1y")
buttonCode = Array[String](["M1", "RT"])

[node name="CooldownAdditiveReduction" type="Node" parent="ShootCooldown"]
script = ExtResource("5_eejht")
ability = "Fire Rate"
baseAdditive = 0.1
upgradeImagePath = "res://Assets/UI/Upgrades/Bullet.png"
upgradeId = 1.0
upgradeImage = ExtResource("6_k1tej")

[node name="MeleeCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
script = ExtResource("4_unu1y")
buttonCode = Array[String](["M2", "L1"])

[node name="CooldownAdditiveReduction" type="Node" parent="MeleeCooldown"]
script = ExtResource("5_eejht")
ability = "Melee"
baseAdditive = 0.1
upgradeImagePath = "res://Assets/UI/Upgrades/Melee.png"
upgradeId = 2.0
upgradeImage = ExtResource("7_bdk3u")

[node name="Ability1Cooldown" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
script = ExtResource("4_unu1y")
buttonCode = Array[String](["Q", "R1"])

[node name="CooldownAdditiveReduction" type="Node" parent="Ability1Cooldown"]
script = ExtResource("5_eejht")
ability = "Ability 1"
baseAdditive = 0.5
upgradeImagePath = "res://Assets/UI/Upgrades/shotgun.png"
upgradeId = 3.0
upgradeImage = ExtResource("9_54qtt")

[node name="Ability2Cooldown" type="Timer" parent="."]
one_shot = true
script = ExtResource("4_unu1y")
buttonCode = Array[String](["E", "LT"])

[node name="CooldownAdditiveReduction" type="Node" parent="Ability2Cooldown"]
script = ExtResource("5_eejht")
ability = "Ability 2"
baseAdditive = 0.5
upgradeImagePath = "res://Assets/UI/Upgrades/Dash_attack.png"
upgradeId = 4.0
upgradeImage = ExtResource("10_hlm7b")

[node name="Gun" type="Node2D" parent="."]

[node name="Aiming" type="Marker2D" parent="Gun"]
position = Vector2(15, 0)

[node name="Sprite2D" type="Sprite2D" parent="Gun/Aiming"]
scale = Vector2(1.24, 1.24)
texture = ExtResource("3_723uu")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_2s3ow")

[node name="HealthAdditiveUpgrade" type="Node" parent="HealthComponent"]
script = ExtResource("6_otwx6")
upgradeImagePath = "res://Assets/UI/Upgrades/Health.png"
upgradeId = 5.0
upgradeImage = ExtResource("14_n2ppx")

[node name="ColorComponent" type="Node" parent="."]
script = ExtResource("6_bw6ym")

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
script = ExtResource("7_2xrf5")

[node name="BulletUpgrades" type="Node" parent="."]

[node name="BulletAdditiveUpgrade" type="Node" parent="BulletUpgrades"]
script = SubResource("GDScript_pkb8x")
baseAdditive = 5.0
upgradeImagePath = "res://Assets/UI/Upgrades/Bullet_damage.png"
upgradeId = 6.0
upgradeImage = ExtResource("17_l1s3k")

[node name="SwordUpgrades" type="Node" parent="."]

[node name="SwordAdditiveUpgrade" type="Node" parent="SwordUpgrades"]
script = ExtResource("11_tq7sg")
baseAdditive = 2.5
upgradeId = 7.0
upgradeImage = ExtResource("19_j4w3v")

[node name="Dash" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_yis84")
volume_db = -10.0
bus = &"SFX"

[node name="SpeedComponent" type="Node" parent="."]
script = ExtResource("13_lbtrs")

[node name="MovementSpeedUpgrade" type="Node" parent="SpeedComponent"]
script = ExtResource("14_lwjg2")
upgradeId = 8.0
upgradeImage = ExtResource("23_v1wvv")

[connection signal="timeout" from="DashCooldown" to="." method="_on_dash_cooldown_timeout"]
[connection signal="timeout" from="ShootCooldown" to="." method="_on_shoot_cooldown_timeout"]
[connection signal="timeout" from="MeleeCooldown" to="." method="_on_melee_cooldown_timeout"]
[connection signal="timeout" from="Ability1Cooldown" to="." method="_on_ability_1_cooldown_timeout"]
[connection signal="timeout" from="Ability2Cooldown" to="." method="_on_ability_2_cooldown_timeout"]
